--- a/app/package.json
+++ b/app/package.json
@@ -35,15 +35,15 @@
     "@windows98/micro-services": "workspace:*",
     "@windows98/linters": "workspace:*",
     "@windows98/stylelint-config": "workspace:*",
-    "cypress": "12.17.4",
+    "cypress": "13.6.6",
     "jsdom": "^22.1.0",
     "lint-staged": "15.2.2",
     "sass": "^1.62.1",
     "stylelint": "16.2.1",
     "typescript": "^5.0.4",
-    "vite": "5.0.8",
+    "vite": "5.1.6",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.31.4",
+    "vitest": "1.3.1",
     "vue-tsc": "2.0.6"
   }
 }
