--- a/core/design-system/package.json
+++ b/core/design-system/package.json
@@ -49,7 +49,7 @@
   },
   "devDependencies": {
     "eslint": "8.57.0",
-    "@playwright/experimental-ct-react": "^1.41.1",
+    "@playwright/experimental-ct-react": "1.42.1",
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
@@ -61,9 +61,9 @@
     "sass": "^1.70.0",
     "stylelint": "16.2.1",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8",
+    "vite": "5.1.6",
     "vite-plugin-css-injected-by-js": "^3.3.1",
     "vite-plugin-dts": "^3.7.0",
-    "vitest": "1.2.1"
+    "vitest": "1.3.1"
   }
 }
