--- a/mother-frontend/micro-apps/package.json
+++ b/mother-frontend/micro-apps/package.json
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "eslint": "8.57.0",
-    "@playwright/experimental-ct-react": "^1.41.1",
+    "@playwright/experimental-ct-react": "1.42.1",
     "@types/react": "18.2.43",
     "@types/react-dom": "18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
@@ -40,10 +40,10 @@
     "sass": "1.62.1",
     "stylelint": "16.2.1",
     "typescript": "5.4.2",
-    "vite": "5.0.8",
+    "vite": "5.1.6",
     "vite-plugin-css-injected-by-js": "^3.3.1",
     "vite-plugin-dts": "^3.7.0",
-    "vitest": "1.2.1"
+    "vitest": "1.3.1"
   },
   "engines": {
     "node": "18.16.0"
