--- a/mother-frontend/micro-services/package.json
+++ b/mother-frontend/micro-services/package.json
@@ -14,7 +14,7 @@
     "@windows98/toolkit": "workspace:*",
     "lint-staged": "15.2.2",
     "typescript": "5.4.2",
-    "vitest": "^0.31.4"
+    "vitest": "1.3.1"
   },
   "scripts": {
     "lint:code:fix": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\"",
